...
    }

    private func dropdownOptionRow(key: String, value: String) -> some View {
        HStack {
            Text(value)
            Spacer()
            Image(systemName: "checkmark")
                .opacity(viewModel.selectedRoleFilter == key ? 1 : 0)
        }
        .foregroundStyle(viewModel.selectedRoleFilter == key ? Color.valorantBlack : Color.gray)
        .animation(.none, value: viewModel.selectedRoleFilter)
        .contentShape(Rectangle())
        .padding(.horizontal, 10)
...
