//
//  CategoriesView.swift
//  ValorantKronos
//
//  Created by Ethan Mont on 1/6/25.
//

import SwiftUI

struct CategoriesView: View {
    var body: some View {
        Text("Category")
    }
}

#Preview {
    CategoriesView()
}
